
syntax = "proto3";

import "common/time/robot_time.proto";
import "experimental/beacon_sim/ekf_slam_estimate.proto";

package robot.experimental.beacon_sim.proto;

message BeaconSimDebug {
  robot.time.proto.RobotTimestamp time_of_validity = 1;
  robot.experimental.beacon_sim.proto.EkfSlamEstimate prior = 2;
  // robot.liegroups.proto.SE2 old_robot_from_new_robot = 3;
  robot.experimental.beacon_sim.proto.EkfSlamEstimate prediction = 4;
  // robot.experimental.beacon_sim.proto.Observation observations = 5;
  robot.experimental.beacon_sim.proto.EkfSlamEstimate posterior = 6;
}
